--- a/index.html
+++ b/index.html
@@ -23,25 +23,19 @@
                 <div class="imagem">
                     <i class="fa-solid fa-basket-shopping fa-2xl"></i>
                 </div>
-                <span id="cont-carrinho">0</span>
+                <span id="cont-carrinho"></span>
             </div>
             <div id="carrinho-itens" style="display: none;">
                 <ul id="itens-lista"></ul>
                 <span id="preco-total">Valor Total: R$ 0,00</span>
                 <button onclick="limparCarrinho()">Limpar Carrinho</button>
-            </div>
+            </div>            
         </div>
     </header>
     <br>
-    <br>
-    <br>
-    <br>
     <main id="main">
         <div class="container">
-            <div class="produtos">
-
-
-                <div class="produto-linha">
+            <div class="produtos" id="produtos-lista">
                     <div class="produto">
                         <div class="imagem">
                             <img src="img/10.jpg" alt="">
@@ -49,7 +43,7 @@
                         <div class="infos">
                             <h3>Logitech MX Keys S</h3>
                             <p>R$ 745,00</p>
-                            <button onclick="addCarrinho('Fone', 745.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Logitech MX Keys S', 745.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -59,7 +53,7 @@
                         <div class="infos">
                             <h3>Cadeira Ergonomic, Thunderx3, Yama1</h3>
                             <p>R$ 1350,00</p>
-                            <button onclick="addCarrinho('Fone', 1350.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Cadeira Ergonomic, Thunderx3, Yama1', 1350.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -69,11 +63,9 @@
                         <div class="infos">
                             <h3>Beats Studio 3</h3>
                             <p>R$ 780,00</p>
-                            <button onclick="addCarrinho('Fone', 780.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Beats Studio 3', 780.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
-
-
 
                     <div class="produto">
                         <div class="imagem">
@@ -81,8 +73,8 @@
                         </div>
                         <div class="infos">
                             <h3>Philips Monitor 49 SuperWide</h3>
-                            <p>R$ 680,00</p>
-                            <button onclick="addCarrinho('Fone', 680.00)">Adicionar ao Carrinho</button>
+                            <p>R$ 7680,00</p>
+                            <button onclick="addCarrinho('Philips Monitor 49 SuperWide', 7680.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -92,7 +84,7 @@
                         <div class="infos">
                             <h3>Logitech MX Master 2s</h3>
                             <p>R$ 599,90</p>
-                            <button onclick="addCarrinho('Fone', 590.90)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Logitech MX Master 2s', 590.90)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -100,9 +92,9 @@
                             <img src="img/11.jpg" alt="">
                         </div>
                         <div class="infos">
-                            <h3>Xiaomi Mi Computer Monitor Light Bar </h3>
+                            <h3>Xiaomi Mi Computer Monitor Light Bar</h3>
                             <p>R$ 350,00</p>
-                            <button onclick="addCarrinho('Fone', 350.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Xiaomi Mi Computer Monitor Light Bar', 350.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
 
@@ -115,7 +107,7 @@
                         <div class="infos">
                             <h3>Baseus - Working Station</h3>
                             <p>R$ 1998,90</p>
-                            <button onclick="addCarrinho('Fone', 1998.90)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Baseus - Working Station', 1998.90)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -125,7 +117,7 @@
                         <div class="infos">
                             <h3>Mouse-Pad Desk Logitech</h3>
                             <p>R$ 154,00</p>
-                            <button onclick="addCarrinho('Fone', 154.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Mouse-Pad Desk Logitec', 154.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                     <div class="produto">
@@ -135,17 +127,13 @@
                         <div class="infos">
                             <h3>Stream-Deck Elgato XL</h3>
                             <p>R$ 4690,00</p>
-                            <button onclick="addCarrinho('Fone', 4690.00)">Adicionar ao Carrinho</button>
+                            <button onclick="addCarrinho('Stream-Deck Elgato XL', 4690.00)">Adicionar ao Carrinho</button>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </main>
-
     <script src="script.js"></script>
 </body>
 
